No longer use machine-id's as node names
With CaaSP 3.0, we're introducing a requirement for machines to
have valid+unique hostnames in order to allow for the K8S CPIs
to function correctly.

This means our generated hostname is no longer needed, as our
environment requirements force operators to provision servers
with unique hostnames.

--- a/salt/haproxy/haproxy.cfg.jinja
+++ b/salt/haproxy/haproxy.cfg.jinja
@@ -25,8 +25,8 @@ listen kubernetes-master
         default-server inter 10s fall 3
         balance roundrobin
 
-{%- for minion_id, _ in salt['mine.get']('roles:kube-master', 'network.interfaces', 'grain').items() %}
-        server master-{{ minion_id }} {{ minion_id }}.{{ pillar['internal_infra_domain'] }}:{{ pillar['api']['int_ssl_port'] }} check
+{%- for minion_id, host in salt['mine.get']('roles:kube-master', 'host', 'grain').items() %}
+        server master-{{ minion_id }} {{ host }}:{{ pillar['api']['int_ssl_port'] }} check
 {% endfor -%}
 
 {%- if "admin" in salt['grains.get']('roles', []) %}
@@ -37,8 +37,8 @@ listen kubernetes-dex
         default-server inter 10s fall 3
         balance roundrobin
 
-{%- for minion_id, _ in salt['mine.get']('roles:kube-master', 'network.interfaces', 'grain').items() %}
-        server master-{{ minion_id }} {{ minion_id }}.{{ pillar['internal_infra_domain'] }}:32000 check
+{%- for minion_id, host in salt['mine.get']('roles:kube-master', 'host', 'grain').items() %}
+        server master-{{ minion_id }} {{ host }}:32000 check
 {% endfor %}
 
 listen velum
