--- a/salt/_macros/network.jinja
+++ b/salt/_macros/network.jinja
@@ -16,7 +16,13 @@
   {{- salt['mine.get'](host, 'network.default_route')[host][0]['interface'] -}}
 {%- endmacro %}
 
-{# (given a minion hostname and a list of its network interfaces), return the primary IP #}
+{# (given a minion id and a list of its network interfaces), return the primary IP #}
 {% macro get_primary_ip() -%}
   {{- get_iface_ip(get_primary_iface(**kwargs), **kwargs) -}}
+{%- endmacro %}
+
+{# given a minion id, return the hostname #}
+{% macro get_hostname() -%}
+  {%- set host = kwargs.pop('host', salt['grains.get']('id')) -%}
+  {{- salt['mine.get'](host, 'host')[host] -}}
 {%- endmacro %}
