--- a/salt/etc-hosts/hosts.jinja
+++ b/salt/etc-hosts/hosts.jinja
@@ -1,4 +1,6 @@
 {% from '_macros/network.jinja' import get_primary_ip with context -%}
+{% from '_macros/network.jinja' import get_hostname with context -%}
+
 {% set external_fqdn = pillar['api']['server']['external_fqdn'] -%}
 
 ### service names ###
@@ -13,17 +15,17 @@
 ### admin nodes ###
 {%- set admins = salt['mine.get']('roles:admin', 'network.interfaces', 'grain') %}
 {%- for admin_id, ifaces in admins.items() %}
-{{ get_primary_ip(host=admin_id, ifaces=ifaces) }} {{ admin_id }} {{ admin_id }}.{{ pillar['internal_infra_domain'] }}
+{{ get_primary_ip(host=admin_id, ifaces=ifaces) }} {{ get_hostname(host=admin_id) }} {{ get_hostname(host=admin_id) }}.{{ pillar['internal_infra_domain'] }} {{ admin_id }} {{ admin_id }}.{{ pillar['internal_infra_domain'] }}
 {%- endfor %}
 
 ### kubernetes masters ###
 {%- set masters = salt['mine.get']('roles:kube-master', 'network.interfaces', 'grain') %}
 {%- for master_id, ifaces in masters.items() %}
-{{ get_primary_ip(host=master_id, ifaces=ifaces) }} {{ master_id }} {{ master_id }}.{{ pillar['internal_infra_domain'] }}
+{{ get_primary_ip(host=master_id, ifaces=ifaces) }} {{ get_hostname(host=master_id) }} {{ get_hostname(host=master_id) }}.{{ pillar['internal_infra_domain'] }} {{ master_id }} {{ master_id }}.{{ pillar['internal_infra_domain'] }}
 {%- endfor %}
 
 ### kubernetes workers ###
 {%- set minions = salt['mine.get']('roles:kube-minion', 'network.interfaces', 'grain') %}
 {%- for minion_id, ifaces in minions.items() %}
-{{ get_primary_ip(host=minion_id, ifaces=ifaces) }} {{ minion_id }} {{ minion_id }}.{{ pillar['internal_infra_domain'] }}
+{{ get_primary_ip(host=minion_id, ifaces=ifaces) }} {{ get_hostname(host=minion_id) }} {{ get_hostname(host=minion_id) }}.{{ pillar['internal_infra_domain'] }} {{ minion_id }} {{ minion_id }}.{{ pillar['internal_infra_domain'] }}
 {%- endfor %}
