--- a/salt/motd/motd.jinja
+++ b/salt/motd/motd.jinja
@@ -1,7 +1,8 @@
 Welcome!
 
 Machine ID: {{ salt['grains.get']('machine_id', 'ERROR') }}
-Internal FQDN: {{ salt['grains.get']('caasp_fqdn', 'ERROR') }}
+FQDN: {{ salt['grains.get']('fqdn', 'ERROR') }}
+Hostname: {{ salt['grains.get']('host', 'ERROR') }}
 
 The roles of this node are:
 {%- for role in salt['grains.get']('roles', []) %}
